# scribe

./: Makefile.am  configure.ac
aclocal/: gtest.m4
debian/: changelog  control  dirs  files  rules  scribe.default  scribe.init  scribe.postinst  scribe.postinst.debhelper  scribe.postrm  scribe.postrm.debhelper  scribe.prerm.debhelper  scribe.substvars  substvars
debian/scribe/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
debian/scribe/etc/ld.so.conf.d/: scribe.conf
debian/scribe/usr/share/doc/scribe/: copyright
debian/scribe/usr/share/python-support/: scribe.public
src/: Makefile.am  common.h  dynamic_file_path_policy.cpp  dynamic_file_path_policy.h  file_path_policy.h  file_path_policy_factory.cpp  file_path_policy_factory.h  hostname.cpp  hostname.h  static_file_path_policy.cpp  static_file_path_policy.h  store.cpp  store.h  timestamped_file_path_policy.cpp  timestamped_file_path_policy.h
test/unit/: Makefile.am  dynamic_file_path_policy_test.cpp  file_path_policy_factory_test.cpp  main.cpp  static_file_path_policy_test.cpp  timestamp_helper.cpp  timestamp_helper.h  timestamped_file_path_policy_test.cpp
